// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckList Reducer should add 3 objects to items 1`] = `
Object {
  "items": Object {
    "1": Object {
      "title": "Test 1",
    },
    "2": Object {
      "title": "Test 2",
    },
    "3": Object {
      "title": "Test 3",
    },
  },
  "logs": null,
}
`;

exports[`CheckList Reducer should remove object "1" from "items" 1`] = `
Object {
  "items": Object {
    "2": Object {
      "title": "Test 2",
    },
    "3": Object {
      "title": "Test 3",
    },
  },
  "logs": Object {
    "timestamp-1": Object {
      "2": Object {
        "completed": false,
      },
      "3": Object {
        "completed": false,
      },
    },
    "timestamp-2": Object {
      "2": Object {
        "completed": false,
      },
    },
  },
}
`;

exports[`CheckList Reducer should return object with empty items and logs 1`] = `
Object {
  "items": null,
  "logs": null,
}
`;

exports[`CheckList Reducer should save object "2" in "logs" under timestamp "timestamp-2" 1`] = `
Object {
  "items": Object {
    "1": Object {
      "title": "Test 1",
    },
    "2": Object {
      "title": "Test 2",
    },
    "3": Object {
      "title": "Test 3",
    },
  },
  "logs": Object {
    "timestamp-1": Object {
      "2": Object {
        "completed": false,
      },
      "3": Object {
        "completed": false,
      },
    },
    "timestamp-2": Object {
      "2": Object {
        "completed": false,
      },
    },
  },
}
`;

exports[`CheckList Reducer should save objects "2" and "3" in "logs" under "timestamp-1" 1`] = `
Object {
  "items": Object {
    "1": Object {
      "title": "Test 1",
    },
    "2": Object {
      "title": "Test 2",
    },
    "3": Object {
      "title": "Test 3",
    },
  },
  "logs": Object {
    "timestamp-1": Object {
      "2": Object {
        "completed": false,
      },
      "3": Object {
        "completed": false,
      },
    },
  },
}
`;

exports[`CheckList Reducer should set completed for all elements in "logs" under "timestamp-3" to "false" 1`] = `
Object {
  "items": Object {
    "1": Object {
      "title": "Test 1",
    },
    "2": Object {
      "title": "Test 2",
    },
    "3": Object {
      "title": "Test 3",
    },
  },
  "logs": Object {
    "timestamp-3": Object {
      "1": Object {
        "completed": false,
      },
      "2": Object {
        "completed": false,
      },
      "3": Object {
        "completed": false,
      },
    },
  },
}
`;
